--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
             class="mx-auto title font-weight-light mb-8"
             max-width="720"
           >
-            Парк собираются «благоустроить» — расставить 1372 фонаря, кафе, павильоны, расширить дорожки, замостить резиновым покрытием площадки.  
-            Нельзя. Это не парк культуры и отдыха. Особо охраняемая природная территория (ООПТ) не допускает увеличения рекреационной нагрузки.
+            Парк собираются «благоустроить» — провести трубы и электричество, расставить 1372 фонаря, кафе, павильоны, расширить дорожки, замостить резиновым покрытием площадки.
+            <br><strong>Нельзя.</strong> Это не парк культуры и отдыха. Это &mdash; особо охраняемая природная территория (ООПТ), основное предназначение которой &mdash; сохраниться.
           
           </v-responsive>
 
@@ -121,12 +121,12 @@
 
           <v-btn
             color="grey"
-            href="https://vuetifyjs.com"
+            href="#kiosk"
             outlined
             large
           >
             <span class="grey--text text--darken-1 font-weight-bold">
-              Vuetify Documentation
+              Зайдите в инфо-киоск
             </span>
           </v-btn>
         </v-container>
@@ -135,13 +135,14 @@
       </section>
 
       <section
-        id="features"
+        id="kiosk"
         class="grey lighten-3"
       >
         <div class="py-12"></div>
 
         <v-container class="text-center">
           <h2 class="display-2 font-weight-bold mb-3">Как защитить парк?</h2>
+          <h2 class="display-2 font-weight-bold mb-3">Зайдите в инфо-киоск</h2>
 
           <v-responsive
             class="mx-auto mb-12"
@@ -154,7 +155,7 @@
 
           <v-row>
             <v-col
-              v-for="({ icon, title, text }, i) in features"
+              v-for="({ icon, title, text }, i) in kiosk"
               :key="i"
               cols="12"
               md="4"
@@ -184,8 +185,8 @@
                 ></v-card-title>
 
                 <v-card-text
-                  class="subtitle-1"
-                  v-text="text"
+                  class="subtitle-1 text-left"
+                  v-html="text"
                 >
                 </v-card-text>
               </v-card>
@@ -195,6 +196,8 @@
 
         <div class="py-12"></div>
       </section>
+
+
 
       <section id="stats">
         <v-parallax
@@ -226,11 +229,11 @@
         </v-parallax>
       </section>
 
-      <section id="blog">
+      <!-- <section id="blog">
         <div class="py-12"></div>
 
         <v-container>
-          <h2 class="display-2 font-weight-bold mb-3 text-uppercase text-center">Blog</h2>
+          <h2 class="display-2 font-weight-bold mb-3 text-uppercase text-center">Подробности</h2>
 
           <v-responsive
             class="mx-auto mb-12"
@@ -269,87 +272,15 @@
                 class="ml-n4 font-weight-black"
                 text
               >
-                Continue Reading
+                Продолжить чтение
               </v-btn>
             </v-col>
           </v-row>
         </v-container>
 
         <div class="py-12"></div>
-      </section>
+      </section> -->
 
-      <v-sheet
-        id="contact"
-        color="#333333"
-        dark
-        tag="section"
-        tile
-      >
-        <div class="py-12"></div>
-
-        <v-container>
-          <h2 class="display-2 font-weight-bold mb-3 text-uppercase text-center">Contact Me</h2>
-
-          <v-responsive
-            class="mx-auto mb-12"
-            width="56"
-          >
-            <v-divider class="mb-1"></v-divider>
-
-            <v-divider></v-divider>
-          </v-responsive>
-
-          <v-theme-provider light>
-            <v-row>
-              <v-col cols="12">
-                <v-text-field
-                  flat
-                  label="Name*"
-                  solo
-                ></v-text-field>
-              </v-col>
-
-              <v-col cols="12">
-                <v-text-field
-                  flat
-                  label="Email*"
-                  solo
-                ></v-text-field>
-              </v-col>
-
-              <v-col cols="12">
-                <v-text-field
-                  flat
-                  label="Subject*"
-                  solo
-                ></v-text-field>
-              </v-col>
-
-              <v-col cols="12">
-                <v-textarea
-                  flat
-                  label="Message*"
-                  solo
-                ></v-textarea>
-              </v-col>
-
-              <v-col
-                class="mx-auto"
-                cols="auto"
-              >
-                <v-btn
-                  color="accent"
-                  x-large
-                >
-                  Submit
-                </v-btn>
-              </v-col>
-            </v-row>
-          </v-theme-provider>
-        </v-container>
-
-        <div class="py-12"></div>
-      </v-sheet>
     </v-content>
 
     <v-footer
@@ -358,7 +289,7 @@
       height="100"
     >
       <div class="title font-weight-light grey--text text--lighten-1 text-center">
-        &copy; {{ (new Date()).getFullYear() }} — Vuetify, LLC — Made with 💜 by John Leider
+        &copy; {{ (new Date()).getFullYear() }} — неравнодушные москвичи.
       </div>
     </v-footer>
   </v-app>
@@ -405,11 +336,62 @@
             text: 'Обращения в МосПрироду, депутатам, мэру, президенту',
           },
         ],
+        kiosk: [
+          {
+            icon: 'mdi-account-group-outline',
+            title: 'Где и как',
+            text: `Инфо киоски расположены:
+            <ul>
+              <li>Ленинградское ш. 25А стр.24</li>
+              <li>Волоколамское ш. 56 стр.3</li>
+              <li>5-й Войковский проезд 8К1</li>
+            </ul>
+            <p>Ежедневно 09<sup>00</sup>&ndash;18<sup>00</sup>, перерыв 13<sup>00</sup>&ndash;13<sup>45</sup></p>
+ 
+<p>В инфокиоске лучше писать по одной проблеме на лист и оставлять свои координаты для ответа &mdash; обещали ответить.</p>
+<p>Возьмите в киоске запасной бланк, дома сделайте несколько копий, чтобы поделиться с соседями.</p>
+ `,
+          },
+          {
+            icon: 'mdi-update',
+            title: 'Спросить в киоске',
+            text: `
+              <ul>
+                <li>где планируется высадить 2397шт деревьев и 37559шт кустарников?</li>
+                <li>почему запланировано восстановление почвенного покрова на трети территории ООПТ, покрытой преимущественно лесом? «восстановление газона 481550,2 кв.м; устройство цветников 17927кв.м.»</li>
+                <li>какие МАФ реально пришли в негодность, что потребовало «замены и установки МАФ 1074шт.»?</li>
+                <li>где будет установлено 1372шт опор освещения? Что произойдет с существующими опорами освещения?</li>
+                <li>какие и где «14 некапитальных павильонов» будет установлено? Точно ли там не будет подвода коммуникаций? </li>
+              </ul>
+            `,
+          },
+          {
+            icon: 'mdi-shield-outline',
+            title: 'Утверждать и требовать',
+            text: `
+            <ul>
+              <li>требую сохранить родник Царевна-Лебедь в том виде, в котором он наблюдался на декабрь 2021 г.;</li>
+              <li>я против переделки протопов в дороги с искусственным покрытием, так как это повредит корни деревьев; прошу оставить существующие асфальтовые и гравийные дороги, находящиеся в удовлетворительном состоянии, без изменений! Протестую против дублирования дорожек «буферными зонами»;</li>
+              <li>я против эко-тропы по левому берегу Химки по местам гнездования водоплавающих птиц и местообитанию краснокнижников;</li>
+              <li>прошу не добавлять освещение и лавочки на имеющуюся эко-тропу для сохранения имеющейся там фауны;</li>
+              <li>я против памп-трека и скейт-парка, которые запечатают почву и уничтожат луговое разнотравье – местообитание насекомых и краснокнижных растений;</li>
+              <li>я против двух дополнительных спортплощадок на поляне около 4-го Иваньковского пруда поскольку из имеющихся сегодня площадок используется только одна и то редко;</li>
+              <li>я против кинотеатра, их достаточно в городе;</li>
+              <li>я против кафе на ООПТ, особенно в районе Елизаветинского оврага над водоносным горизонтом родника Царевна-Лебедь; при необходимости прошу построить кафе у входов на территорию ООПТ; </li>
+              <li>прошу не увеличивать количество пикниковых зон на ООПТ;</li>
+              <li>прошу оставить имеющиеся скамейки;</li>
+              <li>прошу вернуть качественные объемные урны;</li>
+              <li>прошу построить туалеты с водоснабжением и водоотведением у каждого входа на ООПТ; прошу не строить туалетов на самой ООПТ, т.к. подведение коммуникаций повредит корни деревьев и приведёт к их последующей гибели.</li>
+            </ul>
+            <p>Заполненный бланк фотографируем и отправляем на портал mos.ru в ДКР, поскольку эти бланки не регистрируются в инфокиоске.</p>
+            `,
+          },
+        ],
         stats: [
-          ['10000', 'подписей собрано'],
-          ['330+', 'Releases'],
-          ['1m', 'Downloads/mo'],
-          ['5m', 'Total Downloads'],
+          ['10000+', 'подписей собрано'],
+          ['2500+', ' в группе fb'],
+          ['7', 'прудов'],
+          ['1', 'парк'],
         ],
       }
     }
