--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <v-img
           contain
           max-height="70%"
-          src="https://cdn.vuetifyjs.com/images/logos/vuetify-logo-dark.png"
+          src="tree.jpg"
         ></v-img>
       </v-avatar>
 
@@ -349,7 +349,13 @@
             <p>Ежедневно 09<sup>00</sup>&ndash;18<sup>00</sup>, перерыв 13<sup>00</sup>&ndash;13<sup>45</sup></p>
  
 <p>В инфокиоске лучше писать по одной проблеме на лист и оставлять свои координаты для ответа &mdash; обещали ответить.</p>
-<p>Возьмите в киоске запасной бланк, дома сделайте несколько копий, чтобы поделиться с соседями.</p>
+<p>Возьмите в киоске запасной <a href="park-form.jpg">бланк</a>, дома сделайте несколько копий, чтобы поделиться с соседями.</p>
+<v-img
+          contain
+          max-height="70%"
+          src="park-form.jpg"
+        ></v-img>
+
  `,
           },
           {
