--- a/index.html
+++ b/index.html
@@ -484,8 +484,8 @@
             title: 'Присоединиться',
             text: `
               <ul>
-                <li><a href="">группа в Facebook</a></li>
-                <li><a href="">чат в Telegram</a></li>
+                <li><a href="https://www.facebook.com/groups/pipstreshnevo">группа в Facebook</a></li>
+                <li><a href="https://t.me/streshnevo_save">чат в Telegram</a></li>
               </ul>
             `,
           },
