Target blank, text core problem

--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@
             class="mx-auto title font-weight-light mb-8"
             max-width="720"
           >
-            Парк собираются «благоустроить» — провести трубы и электричество, расставить 1372 фонаря, кафе, павильоны, расширить дорожки, замостить резиновым покрытием площадки.
-            <br><strong>Нельзя.</strong> Это не парк культуры и отдыха. Это &mdash; особо охраняемая природная территория (ООПТ), основное предназначение которой &mdash; сохраниться.
-          
+            &laquo;Благоустройство&raquo; нашего леса ведёт к исчезновению деревьев, краснокнижных животных и растений.
+            Под угрозой родник.
+            <br>Это &mdash; утрата природной ценности, и снимет с парка охранный статус. 
+            Откроется дорога к застройке территории.
           </v-responsive>
 
           <v-avatar
@@ -123,6 +124,7 @@
           <v-btn
             color="grey"
             href="#kiosk"
+            target="_self"
             outlined
             large
           >
