problem core upd

--- a/index.html
+++ b/index.html
@@ -103,13 +103,12 @@
           </v-responsive>
 
           <v-responsive
-            class="mx-auto title font-weight-light mb-8"
+            class="mx-auto title font-weight-light mb-8 text-left"
             max-width="720"
           >
-            &laquo;Благоустройство&raquo; нашего леса ведёт к исчезновению деревьев, краснокнижных животных и растений.
-            Под угрозой родник.
-            <br>Это &mdash; утрата природной ценности, и снимет с парка охранный статус. 
-            Откроется дорога к застройке территории.
+          <p>Природно-исторический парк Покровское-Стрешнево ждет беспрецедентная урбанизация с уничтожением сотен деревьев, условий для обитания животных, масштабными работами на роднике.</p>
+          <p>Заказчиком работ является Департамент капитального ремонта. Подряд на выполнение работ заключен в обход системы государственных закупок, без соблюдения требований антимонопольного законодательства с компанией не имеющей опыта работ на природных территориях.</p>
+          <p>Невзирая на статусы особо-охраняемой природной территории (ООПТ) и объекта культурного наследия (ОКН), планируемые работы содержат многочисленные нарушения природоохранного и историко-культурного законодательства. Ответственные органы не реагируют. Ограждения уже выставлены, техника зашла в парк.</p>
           </v-responsive>
 
           <v-avatar
