Copy text of appeal

--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
                 </v-expansion-panel-header>
                 <v-expansion-panel-content>
                   <div class="text-left" v-html="item.html"></div className="text-left">
+                  <component :is="item.component" />
                 </v-expansion-panel-content>
               </v-expansion-panel>
             </v-expansion-panels>
@@ -239,8 +240,6 @@
 
         <div class="py-12"></div>
       </section>
-
-
 
 
 
@@ -392,7 +391,6 @@
 
         <div class="py-12"></div>
       </section> -->
-
     </v-content>
 
     <v-footer
@@ -409,6 +407,31 @@
  <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
  <script>
+
+  const btnCounter = Vue.component('copyKSP', {
+    data: function () {
+      return {
+        copied: false
+      }
+    },
+    methods: {
+      copy: function() {
+        navigator.clipboard.writeText(getTextKSP())
+        .then(() => this.copied = '- скопирован!')
+        .then(() => setTimeout(() => this.copied = '', 3000))
+        .catch(console.error)
+        ;
+      },
+    },
+    template: `
+      <v-btn v-on:click="copy">
+        <v-icon small dark left>
+          {{ copied ? 'mdi-check' : 'mdi-content-copy' }}
+        </v-icon>Текст обращения {{ copied ? '— скопирован' : '' }}
+      </v-btn>
+      `,
+  })
+
   new Vue({
     el: '#app',
     vuetify: new Vuetify(),
@@ -445,7 +468,7 @@
               </ol>
               <p>
                 Невозможно вставить скопированный текст, поэтому в окошко &laquo;Содержание обращения&raquo; коротко: 
-                <br>&laquo;Обращение прикреплено&raquo; или &laquo;Текст обращения в приложении&raquo;, а большое письмо прикрепите файлом.
+                <br><code>Обращение прикреплено</code> или <code>Текст обращения в приложении</code>, а большое письмо прикрепите файлом.
               </p>
             `
           },
@@ -486,14 +509,17 @@
               <br>На вопрос орган прокуратуры выбрать &laquo;Прокуратура субъекта Российской Федерации&raquo;
               <br>Далее – Город федерального значения Москва.
               <br>Потом либо &laquo;Природоохранную&raquo; или &laquo;Тушинскую&raquo; прокуратуру.
-              <br>Тема: &laquo;По вопросам охраны окружающей среды и природопользования&raquo;            
+              <br>Тема: <code>По вопросам охраны окружающей среды и природопользования</code>
             `,
           },
           {
             title: 'Счётная палата',
             html: `Контрольно-счётная палата города Москвы
               <br>эл. приёмная  <a href="https://ksp.mos.ru/feedback/zapros.php">ksp.mos.ru/feedback/zapros.php</a>
+              <br>Тема обращения: <code>Неправомерность расходов бюджетных средств</code>
+
             `,
+            component: 'copyKSP',
           },
         ],
         online: [
@@ -589,6 +615,51 @@
       }
     }
   })
+
+  function getTextKSP() {
+    return `
+Председателю Контрольно-счетной палаты Москвы
+Двуреченских В. А. 
+
+
+Уважаемый Виктор Александрович,
+
+Руководствуясь Законом г. Москвы от 30.06.2010г. N 30 «О Контрольно-счетной палате Москвы» (с изм. 13.10.2021), прошу Вас провести контроль правомерности и обоснованности расходов по статье "Организация досуга и отдыха населения на особо охраняемых природных территориях в городе Москве" бюджета города Москвы, принятого Законом г. Москвы № 33 от 24.11.2021 «О бюджете города Москвы на 2022 г. и плановый период 2023 и 2024 годов». Указанная статья закладывает расходы бюджетных средств в размере: 23 093 127 300  руб. на 2022г, 16 333 965 300  руб. на 2023г.  и 19 073 708 000  руб. на 2024г., итого: 58 500 800 600 рублей.
+
+П.1 ст. 17 упомянутого Закона о Контрольно-счётной палате Москвы позволяет провести экспертизу закона о бюджете города Москвы, а п.2. ст.17 «оценивать наличие коррупциогенных факторов». Обращаем Ваше внимание, что с 2014 по 2021 год на текущее обслуживание и благоустройство особо охраняемых природных территорий бюджетом г. Москвы потрачено 33 496 809 782,76 руб. по 912 государственным закупкам (перечень госзакупок прилагается). Указанными работами, а также работами предыдущих лет все природные территории Москвы оборудованы необходимой инфраструктурой для комфортного отдыха в природном окружении. Гражданами накоплен огромный банк фото- и видео-фиксации актуального состояния дорожно-тропиночной сети, МАФ, детских и спортивных площадок, ограждений, ворот и прочих элементов благоустройства (несколько фотографий 2021г для примера в Приложении). Таким образом, налицо расход бюджетных средств на переделку и замену уже имеющейся инфраструктуры хорошего качества. Никакого обоснования такому решению не имеется.
+
+Неправомерность расхода бюджета по статье "Организация досуга и отдыха населения на особо охраняемых природных территориях в городе Москве" вытекает из нарушения федерального и регионального законодательства: 
+
+- Федеральных законов  N 7-ФЗ от 10.01.2002 (п.2. ст.59, п.1 ст. 60, п.2 ст.61),   №33-ФЗ от 14.03.1995 (п.3 ст.21),   № 52-ФЗ от 24.04.1995 (ст. 24), N 73-ФЗ от 25.06.2002 (п.1. 1) ст. 5.1); пп.4.6-5 Приказа №999 от 01.12.2020. Минприроды России о проведении общественных обсуждений предварительных материалов ОВОС;
+- Закон г. Москвы № 48 от 19.12.2007 (п.4 ст.28); Постановление Правительства Москвы от 19.02.2013 № 79-ПП (абз. 2 п. 1.3 Приложения 1, п. 7.6. Приложения 1), МГСН 1.01-99 (п.2.4.1.);
+
+
+Причинение ущерба городу Москве (упомянутого в ст.20 Закона г. Москвы N 30 от 30.06.2010г.) вытекает также из факта освоения бюджетных средств по статье "Организация досуга и отдыха населения на особо охраняемых природных территориях в городе Москве" не профильными специалистами:
+
+1. работы организованы Департаментом капитального ремонта г. Москвы, 
+
+2. Заказчиком проектов выступает Государственное Казенное Учреждение по капитальному ремонту многоквартирных домов города Москвы «УКРИС»   (https://zakupki.gov.ru/epz/order/notice/oku504/view/common-info.html?regNumber=0173200001420000963 или https://zakupki.gov.ru/epz/order/notice/ok504/view/documents.html?regNumber=0173200001421001704); 
+
+3. Департамент природопользования и охраны окружающей среды г. Москвы не принимал участия в разработке проектов благоустройства (см. письмо в Приложении);
+
+4. Подряд на реализацию проектов благоустройства ООПТ заключен с организациями, не имеющими опыта работ на природных территориях: 
+
+4.1. «благоустройство» ООПТ и ОКН регионального значения  ПИП Покровское-Стрешнево общей площадью 221,47 га с ОКН федерального значения в его составе выполняет ООО «Генстрой» - микропредприятие со списочным составом в 7 человек, имеющее опыт только в благоустройстве кладбищ; 
+
+4.2. «благоустройство» ООПТ ПИП «Битцевский лес» будет выполнять ООО «Юг 2008», также не имеющее работ на природных территориях в качестве зарегистрированных видов деятельности.
+
+На наличие коррупциогенных факторов указывает отсутствие тендеров на проведение соответствующих работ в ЕИС ГосЗакупки. Открытые торги и аукцион по выбору подрядчика для реализации статьи городского бюджета не проводились. С подрядчиками ООО «Генстрой» и ООО «Юг 2008» заключала договоры АНО «Развитие городских технологий» за №322 от 23.11.2021 и №323 от 26.11.2021 соответственно (см Приложение). Переход бюджетных средств, выделенных Департаменту капитального ремонта г. Москвы, в АНО «Развитие городских технологий» не прозрачен. Налицо нарушение принципа свободной конкуренции, заложенного ст.8 Федерального закона от 05.04.2013 N 44-ФЗ (ред. от 30.12.2021) "О контрактной системе в сфере закупок товаров, работ, услуг для обеспечения государственных и муниципальных нужд" (с изм. и доп., вступ. в силу с 01.01.2022)., а также нарушение ст. 9. «Принцип профессионализма заказчика» и ст.19. «Нормирование в сфере закупок» указанного закона.
+
+Отдельного упоминания заслуживает факт более дорогостоящего содержания вновь благоустроенных территорий с дополнительной инфраструктурой и возведёнными объектами, в том числе капитальными, в то время как московский бюджет испытывает дефицит: на 2022 г запланированный дефицит составляет 340,6 млрд. руб, на 2023г. - 183,4 млрд. руб. Текущее обслуживание природных территорий с естественной саморегулирующейся экосистемой существенно дешевле обслуживания искусственных газонов.
+
+На основании ст. 18 Закона г.Москвы от 30.06.2010г. N 30 О Контрольно-счётной палате Москвы прошу Вас провести финансовый аудит расходования бюджетных средств по статье "Организация досуга и отдыха населения на особо охраняемых природных территориях в городе Москве" Закона г. Москвы «О бюджете города Москвы на 2022 г. и плановый период 2023 и 2024 годов» № 33 от 24.11.2021.
+
+На основании ст. 20 Закона г.Москвы от 30 июня 2010г. N 30 О Контрольно-счётной палате Москвы прошу Вас направить представление или предписание об устранении выявленных нарушений и недостатков с указанием сроков их устранения и (или) принятии мер по недопущению нарушений и недостатков.
+
+Данная ситуация требует безотлагательного применения мер по пресечению имеющихся нарушений, так как работы на двух ООПТ: «Покровское-Стрешнево» и «Битцевский лес» уже начаты. В то время как ведущие российские природоохранные организации, а также ряд академиков, член-корреспондентов РАН, учёных и активистов дали крайне негативную оценку планирующемуся благоустройству, назвав его причинением вреда, в том числе необратимого.
+    
+    `;
+  }
 </script>
 </body>
 </html>
