--- a/index.html
+++ b/index.html
@@ -584,11 +584,12 @@
             title: 'Спросить в киоске',
             text: `
               <ul>
-                <li>где планируется высадить 2397&nbsp;шт деревьев и 37559&nbsp;шт кустарников?</li>
-                <li>почему запланировано восстановление почвенного покрова на трети территории ООПТ, покрытой преимущественно лесом? «восстановление газона 481550,2 кв.м; устройство цветников 17927кв.м.»</li>
-                <li>какие МАФ реально пришли в негодность, что потребовало «замены и установки МАФ 1074&nbsp;шт.»?</li>
-                <li>где будет установлено 1372шт опор освещения? Что произойдет с существующими опорами освещения?</li>
+                <li>где планируется высадить 2397 деревьев и 37559 кустарников? Новые деревья смогут выполнять такую же экологическую функцию как нынешние вековые сосны и дубы только через 40-50 лет. Если приживутся. Но опыт московских парков показывает, что новые деревья очень плохо приживаются, особенно высаженные в подлеске.  В нашем лесопарке нет достаточных открытых пространств для посадки такого количества новых деревьев и кустарников. Планируется масштабная вырубка?</li>
+                <li>если запланировано восстановление почвенного покрова на трети территории ООПТ, покрытой преимущественно лесом (&laquo;восстановление газона 481550,2 кв.м, устройство цветников 17927кв.м.&raquo;), то это означает, что треть площади леса будет лишена естественного покрова и деревьев. В каких местах, покажите, пожалуйста на карте?</li>
+                <li>какие МАФ реально пришли в негодность, что потребовало «замены и установки МАФ 1074шт.»? Почему это не делается за счёт исполнителя благоустройства 2018г? У таких объектов должен быть гарантийный срок службы, превышающий 3 года!</li>
+                <li>где будет установлено 1372 опоры освещения? Что произойдет с существующими опорами освещения?</li>
                 <li>какие и где «14 некапитальных павильонов» будет установлено? Точно ли там не будет подвода коммуникаций? </li>
+                <li>зачем нужен гравий на детских площадках вместо травы? Падение на гравий травмоопасно для нежной детской кожи!</li>
               </ul>
             `,
           },
@@ -597,18 +598,32 @@
             title: 'Утверждать и требовать',
             text: `
             <ul>
-              <li>требую сохранить родник Царевна-Лебедь в том виде, в котором он наблюдался на декабрь 2021 г.;</li>
-              <li>я против переделки протопов в дороги с искусственным покрытием, так как это повредит корни деревьев; прошу оставить существующие асфальтовые и гравийные дороги, находящиеся в удовлетворительном состоянии, без изменений! Протестую против дублирования дорожек «буферными зонами»;</li>
-              <li>я против эко-тропы по левому берегу Химки по местам гнездования водоплавающих птиц и местообитанию краснокнижников;</li>
-              <li>прошу не добавлять освещение и лавочки на имеющуюся эко-тропу для сохранения имеющейся там фауны;</li>
-              <li>я против памп-трека и скейт-парка, которые запечатают почву и уничтожат луговое разнотравье – местообитание насекомых и краснокнижных растений;</li>
-              <li>я против двух дополнительных спортплощадок на поляне около 4-го Иваньковского пруда поскольку из имеющихся сегодня площадок используется только одна и то редко;</li>
-              <li>я против кинотеатра, их достаточно в городе;</li>
-              <li>я против кафе на ООПТ, особенно в районе Елизаветинского оврага над водоносным горизонтом родника Царевна-Лебедь; при необходимости прошу построить кафе у входов на территорию ООПТ; </li>
-              <li>прошу не увеличивать количество пикниковых зон на ООПТ;</li>
-              <li>прошу оставить имеющиеся скамейки;</li>
-              <li>прошу вернуть качественные объемные урны;</li>
-              <li>прошу построить туалеты с водоснабжением и водоотведением у каждого входа на ООПТ; прошу не строить туалетов на самой ООПТ, т.к. подведение коммуникаций повредит корни деревьев и приведёт к их последующей гибели.</li>
+<li>требую сохранить родник Царевна-Лебедь в том виде, в котором он наблюдался на декабрь 2021 г.; проведение нового каптажа с установкой пластиковых ёмкостей, вырубкой деревьев и срезом всего склона может привести к уходу воды в другие водоносные горизонты, а регулярная чистка ёмкостей хлором сделает воду непригодной для питьевого использования, а также погубит все живые организмы на реке Химка! Вместо эко-тропы по берегу реки с бобрами, птицами, ондатрами, мы получим прогулку вдоль мертвого канала! Запланированный каптаж – это полноценные строительные работы, которые запрещены в памятнике природы, которым является родник «Царевна-лебедь»! Тем более, что Подрядчик ООО «Генстрой» умеет благоустраивать только кладбища, в каптаже не компетентен.</li>
+<li>прошу отказаться от переделки протопов (тропинок) в дороги с искусственным покрытием, так как это повредит корни деревьев; прошу оставить существующие асфальтовые и гравийные дороги, находящиеся в удовлетворительном состоянии, без изменений! Протестую против дублирования дорожек «буферными зонами», т.к. это повредит корни деревьев;</li>
+<li>прошу отказаться от эко-тропы по левому берегу Химки по местам гнездования водоплавающих птиц и местообитанию краснокнижных растений;</li>
+<li>прошу не добавлять освещение и лавочки на имеющуюся эко-тропу для сохранения имеющейся там фауны;</li>
+<li>прошу отказаться от дополнительного освещения по всему парку, т.к. это приведёт к исчезновению сов из нашего леса! За исчезновением сов последует возрастание количества мелких грызунов (мышей и крыс), что нарушит все цепи питания и баланс в экосистеме!</li>
+<li>прошу отказаться от освещения по берегам 3, 4, 5 прудов – излишнее освещение сбивает биоритмы птиц и насекомых, сокращает кормовую базу животным. Из-за обильного освещения есть риск получения мертвого парка!</li>
+<li>прошу провести реконструкцию очистных сооружений, находящихся у первого пруда и принимающих канализационные стоки из Тушино. На сегодняшний день их мощностей недостаточно, поэтому происходит регулярный сброс фекалий напрямую в первый пруд , а из него по каскаду в остальные 6 прудов! Учитывая пляжную зону на 4 пруде такая ситуация является серьёзной угрозой здоровью отдыхающих и нарушением всех санитарно-эпидемиологических норм!</li>
+<li>прошу построить стационарные кафе с туалетами и с водоснабжением и водоотведением у каждого входа на территорию ООПТ за границей самого ООПТ! </li>
+<li>я против кафе и туалетов внутри ООПТ, особенно в районе Елизаветинского оврага над водоносным горизонтом родника Царевна-Лебедь; подведение коммуникаций к кафе и туалетам повредит корни деревьев и приведёт к их последующей гибели.</li>
+<li>прошу провести реставрацию исторических построек Усадьбы «Покровское-Глебово-Стрешнево» с приспособлением их для общественного использования;</li>
+<li>прошу отказаться от памп-трека и скейт-парка, которые запечатают почву и уничтожат луговое разнотравье – местообитание насекомых и краснокнижных растений. Для корневой системы деревьев необходимо открытое пространство в 35 диаметров ствола, иначе дерево не получает достаточного питания. Поэтому обустройство скейт-парка грозит медленной гибелью вековым соснам.</li>
+<li>прошу отказаться от двух дополнительных спортплощадок на поляне около 4-го Иваньковского пруда поскольку из имеющихся сегодня площадок используется только одна и то редко;</li>
+<li>прошу отказаться от кинотеатра, их достаточно в нашем районе! А на планируемом месте установки кинотеатра гнездятся птицы и прекрасный вид на пруды! Шум от кинотеатра вынудит птиц покинуть это местообитание! За исчезновением птиц последует увеличение количества насекомых, в том числе вредителей леса, значит грозит деградацией оставшимся деревьям!</li>
+<li>прошу отказаться от увеличения площади пандусов на родниках – приподнятые над землей пандусы являются отличным укрытием для крыс и способствуют их размножению!</li>
+<li>прошу не увеличивать количество пикниковых зон на ООПТ от которых много шума и дыма, не сочетающегося с отдыхом в природном окружении;</li>
+<li>прошу отказаться от дополнительных беседок на шахматной поляне – закрытые беседки являются излюбленным местом асоциальных элементов;</li>
+<li>прошу оставить имеющиеся тематические скамейки с Царевной Лебедем;</li>
+<li>прошу вернуть качественные объемные урны;</li>
+<li>прошу отказаться от прокладки эко-тропы по ложу Елизаветинского оврага – эко-тропа не остановит катающихся там зимой детей, а лишь станет опаснейшим объектом для столкновения;</li>
+<li>прошу отказаться от увеличения площади детской площадки на дубовой поляне и увеличению количества МАФ, нет обустройству покрытия на этой площадке – это повредит корни дубов;</li>
+<li>прошу вынести на публичное обсуждение (но не на Активный гражданин, а в систему roi.ru) вопрос реставрации регулярного парка около Усадьбы или сохранения леса в соответствии с требованием законодательства об ООПТ.</li>
+<li>прошу отказаться от лодочной станции на берегу 5 пруда – акватория пруда лишь 4,3 га, что создаст угрозу безопасности купающимся, помешает рыбакам. Ранее на 4-м пруду уже была лодочная станция, которая не пользовалась спросом, и её демонтировали. </li>
+<li>прошу вывести из проекта благоустройства ремесленный двор на территории подворья – эта земля передана в бессрочное пользование РПЦ, поэтому должна обслуживаться и развиваться за счет доходов РПЦ, а не налоги граждан;</li>
+<li>протестую против стоянки со стороны 5-го Войковского проезда на месте ГСК Треугольник. Такая огромная стоянка привлечет толпы народа в ООПТ, что приведет к полной деградации природы. Если территория высвобождается, то здесь следует разместить охранную зону ООПТ для снижения рекреационной нагрузки на природную территорию. Также здесь можно разместить кафе и туалеты. Аналогично стоянка со стороны Никольского проезда – внутри ООПТ не должно быть изъятых кусков.</li>
+<li>прошу восстановить мозаику Царевна Лебедь, любимую местным населением;</li>
+<li>прошу провести реставрацию вокзала Покровское-Стрешнево и рекреационное развитие территории у вокзала, с обустройством безопасного перехода в природно-исторический парк. Смещение рекреационной нагрузки за периметр ООПТ будет способствовать сохранению природы.</li>
             </ul>
             <p>Заполненный бланк фотографируем и отправляем на портал mos.ru в ДКР, поскольку эти бланки не регистрируются в инфокиоске.</p>
             `,
