favicon, img, small text upd

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900' rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
-  <link rel="shortcut icon" href="https://cdn.vuetifyjs.com/images/logos/favicon.ico">
+  <link rel="shortcut icon" href="img/tree-5.svg">
   <base target="_blank">
 </head>
 <body>
@@ -26,7 +26,7 @@
         <v-img
           contain
           max-height="70%"
-          src="tree.jpg"
+          src="img/tree.jpg"
         ></v-img>
       </v-avatar>
 
@@ -40,7 +40,7 @@
         <v-row no-gutters>
           <v-img
             :min-height="'calc(100vh - ' + $vuetify.application.top + 'px)'"
-            src="park-autumn.jpg"
+            src="img/park-autumn.jpg"
           >
             <v-theme-provider dark>
               <v-container fill-height>
@@ -115,17 +115,17 @@
             class="elevation-12 mb-12"
             size="128"
           >
-            <v-img src="tree.png"></v-img>
+            <v-img src="img/tree.png"></v-img>
           </v-avatar>
 
           <div></div>
 
           <v-btn
             color="grey"
-            href="#kiosk"
             target="_self"
             outlined
             large
+            @click="$vuetify.goTo('#kiosk')"
           >
             <span class="grey--text text--darken-1 font-weight-bold">
               Зайдите в инфо-киоск
@@ -200,7 +200,7 @@
 
 
 
-      <section id="about-me">
+      <section id="officials">
         <div class="py-12"></div>
 
         <v-container class="text-center">
@@ -313,7 +313,7 @@
       <section id="stats">
         <v-parallax
           :height="$vuetify.breakpoint.smAndDown ? 700 : 500"
-          src="ponds.jpg"
+          src="img/ponds.jpg"
         >
           <v-container fill-height>
             <v-row class="mx-auto">
@@ -597,7 +597,7 @@
             icon: 'mdi-bullhorn-outline',
             title: 'Утверждать и требовать',
             text: `
-            <ul>
+            <ol>
 <li>требую сохранить родник Царевна-Лебедь в том виде, в котором он наблюдался на декабрь 2021 г.; проведение нового каптажа с установкой пластиковых ёмкостей, вырубкой деревьев и срезом всего склона может привести к уходу воды в другие водоносные горизонты, а регулярная чистка ёмкостей хлором сделает воду непригодной для питьевого использования, а также погубит все живые организмы на реке Химка! Вместо эко-тропы по берегу реки с бобрами, птицами, ондатрами, мы получим прогулку вдоль мертвого канала! Запланированный каптаж – это полноценные строительные работы, которые запрещены в памятнике природы, которым является родник «Царевна-лебедь»! Тем более, что Подрядчик ООО «Генстрой» умеет благоустраивать только кладбища, в каптаже не компетентен.</li>
 <li>прошу отказаться от переделки протопов (тропинок) в дороги с искусственным покрытием, так как это повредит корни деревьев; прошу оставить существующие асфальтовые и гравийные дороги, находящиеся в удовлетворительном состоянии, без изменений! Протестую против дублирования дорожек «буферными зонами», т.к. это повредит корни деревьев;</li>
 <li>прошу отказаться от эко-тропы по левому берегу Химки по местам гнездования водоплавающих птиц и местообитанию краснокнижных растений;</li>
@@ -624,8 +624,9 @@
 <li>протестую против стоянки со стороны 5-го Войковского проезда на месте ГСК Треугольник. Такая огромная стоянка привлечет толпы народа в ООПТ, что приведет к полной деградации природы. Если территория высвобождается, то здесь следует разместить охранную зону ООПТ для снижения рекреационной нагрузки на природную территорию. Также здесь можно разместить кафе и туалеты. Аналогично стоянка со стороны Никольского проезда – внутри ООПТ не должно быть изъятых кусков.</li>
 <li>прошу восстановить мозаику Царевна Лебедь, любимую местным населением;</li>
 <li>прошу провести реставрацию вокзала Покровское-Стрешнево и рекреационное развитие территории у вокзала, с обустройством безопасного перехода в природно-исторический парк. Смещение рекреационной нагрузки за периметр ООПТ будет способствовать сохранению природы.</li>
-            </ul>
-            <p>Заполненный бланк фотографируем и отправляем на портал mos.ru в ДКР, поскольку эти бланки не регистрируются в инфокиоске.</p>
+            </ol>
+            <p>В инфо-киоске принятные бланки никак не регистрируют. Поэтому заполненный бланк сфотографируйте и отправьте, пожалуйста, 
+              на <a href="https://www.mos.ru/feedback/reception/">портал Mos.ru</a> в "ЖКХ и благоустройство" &rarr; "Департамент капитального ремонта".</p>
             `,
           },
         ],
