--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
   <link rel="shortcut icon" href="img/tree-5.svg">
   <base target="_blank">
+  <meta property="og:url" content="https://pspark.ru/" />
+  <meta property="og:locale" content="ru_RU" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Сохраним парк Покровское-Стрешнево" />
+  <meta property="og:description" content="Что происходит с парком и как можно помочь сохранить парк." />
+  <meta property="og:image" content="https://pspark.ru/img/park-autumn.jpg" />
 </head>
 <body>
 <div id="app">
