--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <meta property="og:title" content="Сохраним парк Покровское-Стрешнево" />
   <meta property="og:description" content="Что происходит с парком и как можно помочь сохранить парк." />
   <meta property="og:image" content="https://pspark.ru/img/park-autumn.jpg" />
+  <meta property="og:image:width" content="2048" />
+  <meta property="og:image:height" content="988" />
 </head>
 <body>
 <div id="app">
