minor text tweaks

--- a/index.html
+++ b/index.html
@@ -326,11 +326,16 @@
 
             <h3 class="my-3">Отправка через эл. приёмную:</h3>
             <ol>
+              <li><a href="https://www.mos.ru/feedback/reception/?department=20488090">открыть</a> эл. приёмную ДКН</li>
               <li>получатель обращения: <code>Строительство</code> &rarr; <code>Департамент Культурного Наследия</code></li>
               <li>заполняем <code>Сведения об отправителе</code></li>
               <li><code>Суть вопроса</code> &ndash; можно написать: <code>Предложения/Замечания/Возражения на Акт ГИКЭ</code> </li>
-              <li><code>Содержание обращения</code> позволяет скопировать и вставить, однако подготовленный текст превышает допустимые 10 тыс. знаков.</li>
-              <li>Либо прикрепить текст файлом, и указать, что содержание обращения в приложении; либо редактировать и сокращать.</li>
+              <li><code>Содержание обращения</code> позволяет скопировать и вставить, однако подготовленный текст превышает допустимые 10 тыс. знаков.
+                <ul>
+                  <li>либо прикрепить текст файлом, и указать, что содержание обращения в приложении</li>
+                  <li>либо редактировать текст и сокращать</li>
+                </ul>
+              </li>
               <li>Потребуется ввести проверочный код.</li>
             </ol>
             <p class="my-3">
