contacts, video fit

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                   </v-card-title>
                   <v-card-text>
                     <ul>
-                      <li>ТВ Россия-1, Вести Москва: <a href="https://www.vesti.ru/video/2376141">Реконструкция парка вызвала у местных жителей вопросы. Вести-Москва</a></li>
+                      <li>ТВ Россия-1, Вести-Москва: <a href="https://www.vesti.ru/video/2376141">Реконструкция парка вызвала у местных жителей вопросы</a></li>
                       <li>Ведомости:
                         <br><a href="https://tinyurl.com/y7bburf5">Ученые ищут у президента России защиту от разорения московских лесопарков</a> 
                         <br>и <a href="https://tinyurl.com/3zxcbrts">Больше 10 тысяч человек требуют остановить «благоустройство» лесов и парков Москвы</a>
@@ -333,7 +333,7 @@
                     Постоянно пополняемый <a href="https://youtube.com/playlist?list=PLfzaXDQBQ7yFoFqILJSp5bQsTCP3-nu3L">плейлист на YouTube</a>.
                   </v-card-text>
                   <v-sheet>
-                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLfzaXDQBQ7yFoFqILJSp5bQsTCP3-nu3L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="468" height="264" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLfzaXDQBQ7yFoFqILJSp5bQsTCP3-nu3L" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </v-sheet>
                 </v-card>
               </v-col>
@@ -491,7 +491,9 @@
       height="100"
     >
       <div class="title font-weight-light grey--text text--lighten-1 text-center">
-        &copy; {{ (new Date()).getFullYear() }} — неравнодушные москвичи.
+        Россия, Москва, <abbr title="Северо-Западный административный округ">СЗАО</abbr>, район Покровское-Стрешнево
+        <br>Эл. почта: <a href="mailto:ps-park@mail.ru">ps-park@mail.ru</a>
+        <br>&copy; {{ (new Date()).getFullYear() }}, неравнодушные москвичи.
       </div>
     </v-footer>
   </v-app>
